--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,6 +117,20 @@ jobs:
           output-method: inject
           fail-on-diff: true
 
+  shell-test:
+    name: Shell Scripts
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install dependencies
+        run: sudo apt-get update && sudo apt-get install -y shellcheck bats
+      - name: Shellcheck
+        run: find scripts -name "*.sh" -type f -print0 | xargs -0 shellcheck -x -S warning
+      - name: BATS tests
+        run: bats tests/
+
   markdown-lint:
     name: Markdown Lint
     runs-on: ubuntu-latest
