feat(terraform): generate SSH keypair for monitoring health checks
Add a TLS-generated ED25519 keypair so the monitoring VM can SSH into
prod VMs for health checks. The private key is provisioned via
cloud-init and the public key is exposed as an output to be injected
into other environments' ssh_public_keys.

--- a/infrastructure/proxmox/environments/prod/terraform.tfvars.example
+++ b/infrastructure/proxmox/environments/prod/terraform.tfvars.example
@@ -66,6 +66,13 @@ ssh_public_keys = [
 environment = "prod"
 
 # -----------------------------------------------------------------------------
+# Monitoring SSH Key (health checks)
+# -----------------------------------------------------------------------------
+# Cle publique generee par l'env monitoring (terraform output health_check_ssh_public_key)
+# Permet a la VM monitoring de verifier l'etat des VMs prod via SSH
+# monitoring_ssh_public_key = "ssh-ed25519 AAAA..."
+
+# -----------------------------------------------------------------------------
 # VMs
 # -----------------------------------------------------------------------------
 
