feat(monitoring): add alerting overview Grafana dashboard
Add comprehensive dashboard for Prometheus alerts visualization:
- Real-time alert counters by severity (Critical, Warning, Info)
- Active alerts table with drill-down links to Prometheus
- Collapsible sections: Distribution, Timeline, Category, Meta-Monitoring
- Alert frequency and duration tracking
- Prometheus/Alertmanager health status panels
- Quick links to Prometheus, Alertmanager, and Silences

Fix ProxmoxNodeDown false positives on template VMs (qemu/9000)
by filtering on node/* IDs only.

--- a/infrastructure/proxmox/modules/monitoring-stack/files/prometheus/alerts/default.yml
+++ b/infrastructure/proxmox/modules/monitoring-stack/files/prometheus/alerts/default.yml
@@ -95,7 +95,7 @@ groups:
   - name: proxmox-alerts
     rules:
       - alert: ProxmoxNodeDown
-        expr: pve_up == 0
+        expr: pve_up{id=~"node/.*"} == 0
         for: 2m
         labels:
           severity: critical
