feat(monitoring): add custom_scrape_configs for advanced Prometheus configs
Add support for injecting custom Prometheus scrape configurations
with advanced features like relabel_configs, metric_relabel_configs,
metrics_path, and params (e.g., for Blackbox probes).

Changes:
- Add custom_scrape_configs variable (string, YAML inline)
- Update prometheus.yml.tpl to inject custom configs
- Add gitignore rule for prometheus-*.yml external files
- Document usage with examples in README
- Add 2 tests for the new variable

This enables monitoring of external apps (like Monenzo on 192.168.1.101)
with complex scrape configurations that require relabeling or
Blackbox exporter probes.

--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,15 @@ terraform.rc
 tests/**/.terraform.lock.hcl
 
 # =============================================================================
+# Prometheus - Fichiers de configuration externes
+# =============================================================================
+
+# Configurations Prometheus spécifiques à l'environnement
+# (contiennent des IPs internes, endpoints, etc.)
+prometheus-*.yml
+!**/files/prometheus.yml.tpl
+
+# =============================================================================
 # Secrets et credentials
 # =============================================================================
 
