fix: remove accidentally committed files and update gitignore
- Remove tfplan files, .terraform.lock.hcl, specs/, backup files
- Add patterns to .gitignore to prevent future accidents

--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,10 @@ prometheus-*.yml
 secrets/
 .secrets
 .tui-config.yaml
+
+# Temporary and local files
+*.backup.*
+*.tfplan
+tfplan
+.terraform.lock.hcl
+specs/
