fix(ci): run BATS on CI-compatible directories only
- Fix test_common.bats hardcoded absolute path to use relative path
- Run specific test directories excluding tests/tui/ (requires gum)
- CI now runs 409 BATS tests (848 total with TUI tests locally)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -140,7 +140,9 @@ jobs:
             rm "$tmp"
           done
       - name: BATS tests
-        run: bats --recursive tests/
+        run: |
+          # Run all test directories except tests/tui/ (requires gum)
+          bats tests/ tests/drift/ tests/health/ tests/lifecycle/ tests/restore/ tests/scripts/
 
   markdown-lint:
     name: Markdown Lint
