test: add tooling-stack to CI matrices and error-path BATS tests
- Add tooling-stack module to terraform-validate, terraform-test,
  and terraform-docs CI matrices (+138 TF tests in CI)
- Add 8 error-path tests for check-health.sh (invalid env, missing
  args, component validation, all valid envs/components)
- Add 6 error-path execution tests for restore-vm.sh (invalid VMID,
  bad date format, unknown options)
- Add 5 error-path execution tests for verify-backups.sh (invalid
  vmid, unknown options, no-node fallback, report generation)
- Total BATS tests: 848 → 867 (+19)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,7 @@ jobs:
           - infrastructure/proxmox/modules/backup
           - infrastructure/proxmox/modules/minio
           - infrastructure/proxmox/modules/monitoring-stack
+          - infrastructure/proxmox/modules/tooling-stack
           - infrastructure/proxmox/environments/prod
           - infrastructure/proxmox/environments/lab
           - infrastructure/proxmox/environments/monitoring
@@ -76,6 +77,7 @@ jobs:
           - infrastructure/proxmox/modules/backup
           - infrastructure/proxmox/modules/minio
           - infrastructure/proxmox/modules/monitoring-stack
+          - infrastructure/proxmox/modules/tooling-stack
     steps:
       - name: Checkout
         uses: actions/checkout@v6
@@ -105,6 +107,7 @@ jobs:
           - infrastructure/proxmox/modules/backup
           - infrastructure/proxmox/modules/minio
           - infrastructure/proxmox/modules/monitoring-stack
+          - infrastructure/proxmox/modules/tooling-stack
     steps:
       - name: Checkout
         uses: actions/checkout@v6
