test: add validation tests, docker-compose BATS tests and versions.tf
- Add 25 Terraform validation tests for boundary gaps (vm/lxc expiration_days,
  minio cpu/memory/disk upper bounds and IP format)
- Add 87 BATS tests for docker-compose templates (41 monitoring + 46 tooling)
  covering services, security hardening, ports, volumes and image versions
- Extract required_providers to dedicated versions.tf for monitoring-stack
  and tooling-stack (Terraform convention consistency)
- Enhance dependabot.yml with grouped GitHub Actions updates, CI labels
  and PR limits

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,5 +1,7 @@
 version: 2
+
 updates:
+  # GitHub Actions - automated version updates
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
@@ -9,7 +11,14 @@ updates:
       prefix: "chore(deps)"
     labels:
       - "dependencies"
+      - "ci"
+    open-pull-requests-limit: 5
+    groups:
+      github-actions:
+        patterns:
+          - "*"
 
+  # Terraform providers - environments
   - package-ecosystem: "terraform"
     directory: "/infrastructure/proxmox/environments/prod"
     schedule:
@@ -19,6 +28,8 @@ updates:
       prefix: "chore(deps)"
     labels:
       - "dependencies"
+      - "terraform"
+    open-pull-requests-limit: 3
 
   - package-ecosystem: "terraform"
     directory: "/infrastructure/proxmox/environments/lab"
@@ -29,6 +40,8 @@ updates:
       prefix: "chore(deps)"
     labels:
       - "dependencies"
+      - "terraform"
+    open-pull-requests-limit: 3
 
   - package-ecosystem: "terraform"
     directory: "/infrastructure/proxmox/environments/monitoring"
@@ -39,3 +52,5 @@ updates:
       prefix: "chore(deps)"
     labels:
       - "dependencies"
+      - "terraform"
+    open-pull-requests-limit: 3
