refactor: extract versions.tf, provider constraints, env tests and DRY expiration
- Extract terraform blocks from main.tf to versions.tf in vm, lxc, backup, minio
- Add provider version constraints (~> 0.94) to all 6 modules
- Add version constraints for tls (~> 4.0) and random (~> 3.0) providers
- Create environment integration tests for prod, lab, monitoring (+11 tests)
- Add environments to CI terraform-test matrix
- Deduplicate expiration_days variable via shared symlink (vm/lxc)
- Add workflow_dispatch trigger to CI and Security Scan workflows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on:
     branches: [main, develop]
   pull_request:
     branches: [main, develop]
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -93,6 +94,9 @@ jobs:
           - infrastructure/proxmox/modules/minio
           - infrastructure/proxmox/modules/monitoring-stack
           - infrastructure/proxmox/modules/tooling-stack
+          - infrastructure/proxmox/environments/prod
+          - infrastructure/proxmox/environments/lab
+          - infrastructure/proxmox/environments/monitoring
     steps:
       - name: Checkout
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6
