chore: remove deprecated docker-compose version, add onboarding guide
- Remove deprecated `version: "3.8"` from docker-compose templates
- Align Traefik to v3.3 in tooling stack (was v3.0)
- Pin Uptime Kuma to 1.23.16 (was unpinned :1 tag)
- Add docs/ONBOARDING.md with 30-min developer onboarding path
- Use find-based BATS discovery in CI (catches all test dirs)
- Update BATS tests to verify no deprecated version field
- Add ADRs link to README documentation table

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -237,9 +237,8 @@ jobs:
           done
       - name: BATS tests
         run: |
-          # Run all test directories except:
-          # - tests/drift/ (requires terraform environments)
-          bats tests/ tests/health/ tests/lifecycle/ tests/restore/ tests/scripts/ tests/tui/
+          # Run all tests recursively, excluding drift/ (requires live infrastructure)
+          find tests/ -name '*.bats' -not -path 'tests/drift/*' -print0 | xargs -0 bats
 
   markdown-lint:
     name: Markdown Lint
