chore(release): prepare v1.11.0
Quality and security hardening release (score 8.92/10):

- Add tflint CI job for static analysis across all 6 modules
- Add PR template, environment READMEs, testing docs
- Harden install-promtail.sh with SHA256 checksum and set -euo pipefail
- Harden 4 systemd services with 11 security directives each
- Harden 13 TUI/menu scripts with set -euo pipefail
- Pin Docker images with SHA256 digests
- Enrich CONTRIBUTING.md with PR process and code review checklist
- Add cross-reference documentation links to all module READMEs
- Add tooling-stack regression tests and backup variable validations

Tests: 512 Terraform + 1048 BATS = 1560 total (all passing)

--- a/scripts/systemd/pve-cleanup-snapshots.service
+++ b/scripts/systemd/pve-cleanup-snapshots.service
@@ -12,3 +12,16 @@ WorkingDirectory=/opt/pve-home
 StandardOutput=journal
 StandardError=journal
 SyslogIdentifier=pve-cleanup-snapshots
+
+# Securite
+ProtectSystem=strict
+ReadWritePaths=/var/log
+PrivateTmp=true
+NoNewPrivileges=true
+ProtectHome=true
+ProtectKernelTunables=true
+ProtectKernelModules=true
+ProtectControlGroups=true
+ProtectKernelLogs=true
+RestrictRealtime=true
+RestrictNamespaces=true
