--- a/scripts/systemd/pve-health-check.service
+++ b/scripts/systemd/pve-health-check.service
@@ -18,3 +18,10 @@ ProtectSystem=strict
 ReadWritePaths=/var/lib/prometheus/node-exporter
 PrivateTmp=true
 NoNewPrivileges=true
+ProtectHome=true
+ProtectKernelTunables=true
+ProtectKernelModules=true
+ProtectControlGroups=true
+ProtectKernelLogs=true
+RestrictRealtime=true
+RestrictNamespaces=true
