--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,6 +91,41 @@ jobs:
           fi
           echo "All symlinks valid."
 
+  terraform-lint:
+    name: Terraform Lint
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    strategy:
+      matrix:
+        directory:
+          - infrastructure/proxmox/modules/vm
+          - infrastructure/proxmox/modules/lxc
+          - infrastructure/proxmox/modules/backup
+          - infrastructure/proxmox/modules/minio
+          - infrastructure/proxmox/modules/monitoring-stack
+          - infrastructure/proxmox/modules/tooling-stack
+    steps:
+      - name: Checkout
+        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd # v3
+        with:
+          terraform_version: '1.9.8'
+
+      - name: Setup TFLint
+        uses: terraform-linters/setup-tflint@90f302c255ef959cbfb4bd10581afecdb7ece3e6 # v4
+        with:
+          tflint_version: latest
+
+      - name: Terraform Init
+        run: terraform init -backend=false
+        working-directory: ${{ matrix.directory }}
+
+      - name: Run TFLint
+        run: tflint --format=compact
+        working-directory: ${{ matrix.directory }}
+
   terraform-validate:
     name: Terraform Validate
     runs-on: ubuntu-latest
@@ -255,4 +290,3 @@ jobs:
             **/*.md
             !.claude/**/*.md
             !node_modules/**/*.md
-        continue-on-error: true
