--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ concurrency:
 
 permissions:
   contents: read
+  pull-requests: write
 
 jobs:
   terraform-fmt:
@@ -289,3 +290,77 @@ jobs:
             !.claude/**/*.md
             !node_modules/**/*.md
         continue-on-error: true
+
+  pr-summary:
+    name: PR Summary
+    if: github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    needs: [terraform-fmt, terraform-consistency, terraform-lint, terraform-validate, terraform-test, terraform-docs, shell-test]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6
+        with:
+          fetch-depth: 0
+
+      - name: Post PR summary
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7
+        with:
+          script: |
+            const { execSync } = require('child_process');
+            const base = context.payload.pull_request.base.sha;
+            const head = context.payload.pull_request.head.sha;
+            const diff = execSync(`git diff --name-only ${base} ${head}`).toString();
+            const files = diff.split('\n').filter(Boolean);
+
+            const modules = ['vm', 'lxc', 'backup', 'minio', 'monitoring-stack', 'tooling-stack'];
+            const envs = ['prod', 'lab', 'monitoring'];
+
+            const changedModules = modules.filter(m =>
+              files.some(f => f.includes(`modules/${m}/`))
+            );
+            const changedEnvs = envs.filter(e =>
+              files.some(f => f.includes(`environments/${e}/`))
+            );
+            const changedScripts = files.some(f => f.startsWith('scripts/'));
+            const changedCI = files.some(f => f.startsWith('.github/'));
+            const changedShared = files.some(f => f.includes('shared/'));
+
+            let body = '## Terraform CI Summary\n\n';
+            body += `**${files.length}** files changed\n\n`;
+
+            if (changedModules.length > 0) {
+              body += '**Modules:** ' + changedModules.map(m => `\`${m}\``).join(', ') + '\n';
+            }
+            if (changedEnvs.length > 0) {
+              body += '**Environments:** ' + changedEnvs.map(e => `\`${e}\``).join(', ') + '\n';
+            }
+            if (changedShared) body += '**Shared:** configuration modified\n';
+            if (changedScripts) body += '**Scripts:** shell scripts modified\n';
+            if (changedCI) body += '**CI/CD:** workflow modified\n';
+
+            body += '\nAll CI checks passed.';
+
+            const { data: comments } = await github.rest.issues.listComments({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+            });
+
+            const existing = comments.find(c => c.body?.includes('Terraform CI Summary'));
+
+            if (existing) {
+              await github.rest.issues.updateComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                comment_id: existing.id,
+                body,
+              });
+            } else {
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.issue.number,
+                body,
+              });
+            }
