--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -274,6 +274,23 @@ jobs:
           # - tests/drift/ (requires terraform environments)
           bats tests/ tests/health/ tests/lifecycle/ tests/restore/ tests/scripts/
 
+  terraform-security:
+    name: Terraform Security
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    steps:
+      - name: Checkout
+        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6
+
+      - name: Run Trivy IaC scan
+        uses: aquasecurity/trivy-action@b6643a29fecd7f34b3597bc6acb0a98b03d33ff8 # v0.33.1
+        with:
+          scan-type: 'config'
+          scan-ref: 'infrastructure/proxmox'
+          severity: 'HIGH,CRITICAL'
+          exit-code: '1'
+          trivyignores: '.trivyignore'
+
   markdown-lint:
     name: Markdown Lint
     runs-on: ubuntu-latest
@@ -296,7 +313,7 @@ jobs:
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     timeout-minutes: 5
-    needs: [terraform-fmt, terraform-consistency, terraform-lint, terraform-validate, terraform-test, terraform-docs, shell-test]
+    needs: [terraform-fmt, terraform-consistency, terraform-lint, terraform-validate, terraform-test, terraform-docs, shell-test, terraform-security]
     steps:
       - name: Checkout
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6
